--- a/src/index.css
+++ b/src/index.css
@@ -90,8 +90,11 @@ h3 {
 }
 
 .filter-btn:hover,
-.filter-btn:focus,
-.filter-btn:active {
+.filter-btn:focus {
+  background-color: #d1936f;
+}
+
+.filter-btn.active {
   background-color: #d1936f;
 }
 
@@ -143,6 +146,19 @@ h3 {
   color: aliceblue;
 }
 
+.img-main {
+  width: 100%;
+  height: 100%;
+}
+
+
+
+.other-btn {
+  color: aliceblue;
+  font-size: medium;
+  padding: 10px;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
 
 .upload-btn {
   background-color: rgb(56, 202, 56);
