--- a/src/index.css
+++ b/src/index.css
@@ -24,14 +24,15 @@ h1 {
   text-align: center;
   text-transform: uppercase;
   font-family: monospace;
-  color: #37eb7f;
+  color: #0fe866;
 }
 
 h3 {
   text-align: center;
   text-transform: uppercase;
-  font-family: monospace;
-  color: #ecb392;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  color: #3242d4;
+  border: 1px solid #c8d7e8;
 }
 
 .container {
@@ -54,7 +55,7 @@ h3 {
 
 .tool-container {
   padding: 0px 10px 0px 10px;
-  border: 2px solid red;
+  border: 2px solid rgb(226, 232, 237);
   border-radius: 5px;
   display: flex;
   flex-direction: column;
@@ -64,7 +65,6 @@ h3 {
 .heading-container {
   display: flex;
   justify-content: center;
-  border-bottom: 2px solid red;
 }
 
 .main-container {
@@ -75,32 +75,42 @@ h3 {
 }
 
 .btn-holder {
+  padding: 4px;
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: 6px;
+  border: 1px solid #aac9de;
 }
 
 .filter-btn {
-  background: #82e9c3;
+  background: #4e96e4;
+  color: aliceblue;
   padding: 5px;
   border-radius: 2px;
   font-size: medium;
-  font-family: monospace;
-  font-weight: 800;
+  font-family: 'Times New Roman', Times, serif;
+  font-weight: 500;
 }
 
 .filter-btn:hover,
 .filter-btn:focus {
-  background-color: #d1936f;
+  background-color: #0d6dd5;
 }
 
 .filter-btn.active {
-  background-color: #d1936f;
+  background-color: #0d6dd5;
 }
 
 .slider-container {
   display: flex;
   justify-content: space-evenly;
+  border: 1px solid rgb(192, 197, 210);
+}
+
+.slider-span {
+  color: #107ac5;
+  font-weight: 500;
+  font-size: larger;
 }
 
 #slider {
@@ -120,7 +130,8 @@ h3 {
 }
 
 .orientation-btn {
-  background-color: rgb(226, 226, 234);
+  /* background-color: rgb(105, 140, 214); */
+  border: 1px solid rgb(124, 119, 119);
   color: aliceblue;
   font-size: medium;
   padding: 10px;
@@ -129,14 +140,20 @@ h3 {
 
 .orientation-btn:hover {
   background-color: rgb(212, 212, 230);
-
 }
+
+/* 
+.img-container {
+  display: flex;
+  justify-items: center;
+  align-items: center;
+} */
 
 .input-container {
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: #acb8b9;
+  background-color: #c4c7c7;
   height: 100%;
   gap: 2px;
   cursor: pointer;
